EjemploIstio/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-flask
  template:
    metadata:
      labels:
        app: app-flask
    spec:
      containers:
      - name: app-flask
        image: tu_usuario/app-flask:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: app-flask
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: app-flask
